# operational-intelligence

./: Cargo.toml  README.md
crates/oi-api/: Cargo.toml
crates/oi-api/src/: lib.rs
crates/oi-cli/: Cargo.toml
crates/oi-cli/src/: main.rs
crates/oi-crew/src/: agents.rs
crates/oi-hiring/src/: lib.rs
crates/oi-llm/src/: lib.rs
crates/oi-usage/: Cargo.toml
crates/oi-usage/src/: client.rs  lib.rs  metered.rs
